Fixed a flaw in the metapath evaluator causing child flags, fields, and assemblies to be missed. Refactored metapath evaluation code to simplify the interfaces, remove generics, and add Javadocs. Added some metapath evaluation unit tests.